adding December event

--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ $(document).ready(function () {
 <p>Check out our <a href="https://www.meetup.com/rladies-newyork/">Meetup</a> page to join and for more information about past and future events.</p>
 <div id="upcoming-events" class="section level3">
 <h3>Upcoming events</h3>
-<p>Help us choose a book for the January book club by completing this survey:</p>
+<p>Our <strong>final event of the 2017</strong> is on December 12, 2017 where Erin Grand will talk about how R is used in the Education World. <a href="https://www.meetup.com/rladies-newyork/events/245064725/">Register here</a></p>
+<p>Help us choose a book for the January 2018 book club by completing this survey:</p>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc6H41smC3tcWUyra5Lj2RnTb_rH-cJGQDyux-yrpLecXxfJg/viewform?embedded=true" width="600" height="875" frameborder="0" marginheight="0" marginwidth="0" style="-webkit-transform:scale(0.95);-moz-transform-scale(0.95);">
 Loading…
 </iframe>
