--- a/board.html
+++ b/board.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
@@ -31,10 +31,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -237,7 +239,7 @@ $(document).ready(function () {
 <div id="soumya-kalra" class="section level4">
 <h4>Soumya Kalra</h4>
 <p><img src="images/soumya.jpg" style="width:10%; border-radius:50%; margin-right: 20px"; align="left"></p>
-<p>I am currently a quantitative analyst at the within the Market Risk Group for Supervision at the New York Federal Reserve Bank. Previously I worked as a researcher at the Office of Financial Research at the Department of Treasury focusing covering commodities and private funds from a financial stability perspective. Previously, I worked at the Investment Management Division at the Securities and Exchange Commission where I helped to design analytical risk metrics to help oversee the private funds industry. Prior to this, I worked as a quantitative analyst on the retail power desk at Hess where i primarily was involved in valuing exotic power transactions. I also hold a Masters in mathematical finance and a Bachelor’s degree in Economics from Rutgers University.</p>
+<p>Soumya Kalra is currently a quantitative analyst the within the Market Risk Group for Supervision at the New York Federal Reserve Bank. Previously she worked as a researcher at the Office of Financial Research at the Department of Treasury focusing covering commodities and private funds from a financial stability perspective. She is very passionate about using R in the statistical and data visualization work she performs in her current role. Her vision for R-Ladies New York is to create gender diverse and open forum where we can educate and contribute to the development of R as a community. She holds a Masters in Mathematical Finance and a Bachelor’s degree in Economics from Rutgers University.</p>
 <p><br/></p>
 </div>
 <div id="birunda-chelliah" class="section level4">
