--- a/404.html
+++ b/404.html
@@ -210,10 +210,6 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/book-club-weapons-of-math-destruction/">Book club: Weapons of Math Destruction</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/post/tour-of-r-in-peer-to-peer-lending/">Tour of R in Peer to Peer Lending</a></li>
   </ul>
   
@@ -227,6 +223,10 @@
   
   <ul>
     <li><a href="/post/launching-r-ladies-nyc/">Launching R-Ladies NYC!</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/2018-05-18-lightning-talks/"></a></li>
   </ul>
   
   
