adding lightning talk videos

--- a/404.html
+++ b/404.html
@@ -210,10 +210,6 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/book-club-dear-data/">Book club: Dear Data</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/post/a-focus-on-health/">A Focus on Health</a></li>
   </ul>
   
@@ -227,6 +223,10 @@
   
   <ul>
     <li><a href="/post/2018-05-18-lightning-talks/"></a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/2018-06-28-lightning-talks-roundup/"></a></li>
   </ul>
   
   
