--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@
 
   <div class="article-style" itemprop="articleBody">
     
-    <p>Come listen to two women who have come into Data Science.</p>
+    <p>Come hear about to two women&rsquo;s transitions into Data Science.</p>
 
 <p>Date: Thursday, May 23rd, 2019</p>
 
 <p>Time: 6:15pm</p>
 
-<p>Speaker: Angeline and Kaelen</p>
+<p>Speakers: Angeline Protacio and Kaelen Medeiros</p>
 
 <p>Host: JP Morgan</p>
 
