update upcoming event

--- a/404.html
+++ b/404.html
@@ -210,10 +210,6 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/tour-of-r-in-peer-to-peer-lending/">Tour of R in Peer to Peer Lending</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/post/book-club-dear-data/">Book club: Dear Data</a></li>
   </ul>
   
@@ -227,6 +223,10 @@
   
   <ul>
     <li><a href="/post/2017-02-21-a-focus-on-health/"></a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/2019-04-17-getting-into-data-science/"></a></li>
   </ul>
   
   
