--- a/index.html
+++ b/index.html
@@ -1247,11 +1247,11 @@ First and foremost, I want to thank RLadiesNYC for the scholarship which allowed
 
 <h1 id="meet-our-board-members">Meet our board members</h1>
 
-<h4 id="soumya-kalra-founder-and-organizer">Soumya Kalra (Founder and Organizer)</h4>
+<h4 id="emily-dodwell-organizer">Emily Dodwell (Organizer)</h4>
 
-<p><img src="/img/soumya.jpg" style="width:20%";/></p>
+<p><img src="/img/emilyd.jpg" style="width:20%";/></p>
 
-<p>Soumya Kalra is currently a quantitative analyst the within the Market Risk Group for Supervision at the New York Federal Reserve Bank.  Previously she worked as a researcher at the Office of Financial Research at the Department of Treasury focusing covering commodities and private funds from a financial stability perspective.  She is very passionate about using R in the statistical and data visualization work she performs in her current role.  Her vision for R-Ladies New York is to create gender diverse and open forum where we can educate and contribute to the development of R as a community.  She holds a Masters in Mathematical Finance and a Bachelor’s degree in Economics from Rutgers University.</p>
+<p>Emily Dodwell is a Senior Inventive Scientist in the Data Science and AI Research organization at AT&amp;T Labs, where she currently focuses on predictive modeling for advertising applications, the creation of interactive tools for data analysis and visualization, and research concerning ethics and fairness in machine learning. Emily is an R enthusiast committed to promoting gender diversity in the community, and she is a member of Forwards, the R Foundation task force on women and other underrepresented groups. Prior to joining AT&amp;T Labs in 2015, Emily taught high school math for three years at Choate Rosemary Hall. She received her M.A. in statistics from Yale University and B.A. in mathematics from Smith College.</p>
 
 <h4 id="alejandra-gerosa">Alejandra Gerosa</h4>
 
@@ -1298,6 +1298,12 @@ First and foremost, I want to thank RLadiesNYC for the scholarship which allowed
 <p>Brooke Watson is a Research Scientist at EcoHealth Alliance, where she studies how the environment affects infectious disease emergence and transmission. In her work, Brooke applies epidemiological methods to study the distribution and determinants of diseases in both humans and wildlife. Brooke uses R to build economic models of the cost of pandemics, map the spatial distributions of zoonotic outbreaks, and identify health risk factors in different populations. Brooke swam for the University of Tennessee in college and earned her Masters degree in Epidemiology from the London School of Hygiene and Tropical Medicine.</p>
 
 <h2 id="past-board-members">Past board members</h2>
+
+<h4 id="soumya-kalra-founder-and-organizer-2016-2019">Soumya Kalra (Founder and Organizer) (2016-2019)</h4>
+
+<p><img src="/img/soumya.jpg" style="width:20%";/></p>
+
+<p>Soumya Kalra is currently a quantitative analyst the within the Market Risk Group for Supervision at the New York Federal Reserve Bank.  Previously she worked as a researcher at the Office of Financial Research at the Department of Treasury focusing covering commodities and private funds from a financial stability perspective.  She is very passionate about using R in the statistical and data visualization work she performs in her current role.  Her vision for R-Ladies New York is to create gender diverse and open forum where we can educate and contribute to the development of R as a community.  She holds a Masters in Mathematical Finance and a Bachelor’s degree in Economics from Rutgers University.</p>
 
 <h4 id="birunda-chelliah-2016-2019">Birunda Chelliah (2016-2019)</h4>
 
