edit latest blog post

--- a/404.html
+++ b/404.html
@@ -210,6 +210,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/book-club-dear-data/">Book club: Dear Data</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/a-focus-on-health/">A Focus on Health</a></li>
   </ul>
   
@@ -223,10 +227,6 @@
   
   <ul>
     <li><a href="/post/2019-04-17-getting-into-data-science/"></a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/2019-08-12-build-a-career-in-ds/"></a></li>
   </ul>
   
   
