--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@ Speakers: Ludmila Janda, Emily Robinson, Emily Dodwell, Gabriela Hempfling, Eliz
 
 <p><img src="/img/emilyd.jpg" style="width:20%";/></p>
 
-<p>Emily Dodwell is a Senior Inventive Scientist in the Data Science and AI Research organization at AT&amp;T Labs, where she currently focuses on predictive modeling for advertising applications, the creation of interactive tools for data analysis and visualization, and research concerning ethics and fairness in machine learning. Emily is an R enthusiast committed to promoting gender diversity in the community, and she is a member of Forwards, the R Foundation task force on women and other underrepresented groups. Prior to joining AT&amp;T Labs in 2015, Emily taught high school math for three years at Choate Rosemary Hall. She received her M.A. in statistics from Yale University and B.A. in mathematics from Smith College.</p>
+<p>Emily Dodwell is a Principal Inventive Scientist in the Data Science and AI Research organization at AT&amp;T Labs, where she currently focuses on predictive modeling for advertising applications, the creation of interactive tools for data analysis and visualization, and research concerning ethics and fairness in machine learning. Emily is an R enthusiast committed to promoting gender diversity in the community, and she is a member of Forwards, the R Foundation task force on women and other underrepresented groups. Prior to joining AT&amp;T Labs in 2015, Emily taught high school math for three years at Choate Rosemary Hall. She received her M.A. in statistics from Yale University and B.A. in mathematics from Smith College.</p>
 
 <h4 id="alejandra-gerosa">Alejandra Gerosa</h4>
 
