Add Sponsors and CoC

--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@
 
 <p>For more information about R-Ladies Global, visit <a href="http://rladies.org/" target="_blank">rladies.org</a>.</p>
 
+<p>R-Ladies is dedicated to providing a harassment-free experience for everyone. We do not tolerate harassment of participants in any form. We follow the <a href="https://rladies.org/code-of-conduct" target="_blank">R-Ladies Global code of conduct</a>.</p>
+
 
     <div class="row">
 
