--- a/index.html
+++ b/index.html
@@ -1212,6 +1212,31 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
   </section>
   
 
+  
+  
+  
+  <section id="sponsors" class="home-section">
+    <div class="container">
+      
+
+
+<div class="row">
+  
+  <div class="col-xs-12 col-md-4 section-heading">
+    <h1>Sponsors</h1>
+    
+  </div>
+  <div class="col-xs-12 col-md-8">
+    <p><img src="/img/RConsortium_Horizontal_Pantone.png" style="width:80%";/></p>
+
+  </div>
+  
+</div>
+
+    </div>
+  </section>
+  
+
 
 
 <footer class="site-footer">
