Fix September event slug.

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
   
   
   <h3 class="article-title" itemprop="name">
-    <a href="/post/lightning-talks/" itemprop="url">R-Ladies NYC Lightning Talks</a>
+    <a href="/post/lightning-talks-2020/" itemprop="url">R-Ladies NYC Lightning Talks</a>
   </h3>
   
 
@@ -422,7 +422,7 @@ Presenters: &ldquo;Partial Correlation Networks in R&rdquo; &ndash; Erin McDonne
     
   </div>
   <p class="read-more">
-    <a href="/post/lightning-talks/" class="btn btn-primary btn-outline">
+    <a href="/post/lightning-talks-2020/" class="btn btn-primary btn-outline">
       CONTINUE READING
     </a>
   </p>
