--- a/index.html
+++ b/index.html
@@ -969,6 +969,12 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <h1 id="meet-our-board-members">Meet our board members</h1>
 
+<h4 id="anisha-bharathsingh">Anisha BharathSingh</h4>
+
+<p><img src="/img/anisha.png" style="width:20%";/></p>
+
+<p>Anisha BharathSingh (she/her) is a Digital &amp; SEO Specialist at AIG where she uses data to optimize the company’s website for search engine performance, conducts social media behavioral testing to improve social media content and targeting strategies, and provides analytical reporting and insight across the company’s corporate external digital channels. Her passion for R started as an Economics undergrad at Bryn Mawr College and she has since explored R, Data Science and Data for Social Good through Meetups like R-Ladies NYC and the creation of her own data science blog.</p>
+
 <h4 id="emily-dodwell-organizer">Emily Dodwell (Organizer)</h4>
 
 <p><img src="/img/emilyd.jpg" style="width:20%";/></p>
@@ -981,25 +987,17 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p>Alejandra works in fundraising in social organizations (now at the ACLU, previously at TECHO and Doctors Without Borders). With the goal to become more data-driven in her work, she earned an MBA from Duke University. There, she discovered R and fell in love with all things related to business intelligence and marketing analytics. Since then, she has been learning R and statistics through friends, online classes and the wonderful R-Ladies community. Alejandra is from Argentina, lived in Spain for 5 years, and now lives in Queens.</p>
 
-<h4 id="rika-gorn">Rika Gorn</h4>
-
-<p><img src="/img/rika.jpg" style="width:20%";/></p>
-
-<p>Rika Gorn is the Director of Data Analytics &amp; Reporting at Covenant House International, a privately funded agency that provides shelter, immediate crisis care, and other services, to homeless and trafficked youth in the United States, Canada, and Latin America. Her work focuses on providing statistical analysis, data visualization, and reporting support to 21 sites across the agency. Previously, she worked on quality assurance for a mobile mental health team at Coordinated Behavioral Care, strategic management and evaluation at TCC Group, and program analysis at the Vera Institute of Justice. Rika received her Bachelors in Political Science from Hunter College and her Masters in Public Administration at the NYU Wagner School of Public Service.</p>
-
 <h4 id="erin-grand">Erin Grand</h4>
 
 <p><img src="/img/erin.jpg" style="width:20%";/></p>
 
 <p>Erin works as a Data Scientist at Uncommon Schools where she trains coworker in R as well as maintaining two R packages. Prior to Uncommon, she worked as a Data Scientist at Crisis Text Line while and a software programmer at NASA while completing her Data Science Masters at Columbia University. Before data science, Erin researched star formation and taught introductory courses in astronomy and physics at the University of Maryland.</p>
 
-<h4 id="gabriela-hempfling">Gabriela Hempfling</h4>
+<h4 id="emily-halford">Emily Halford</h4>
 
-<p><img src="/img/gabriela.png" style="width:20%";/></p>
+<p><img src="/img/emilyh.jpg" style="width:20%";/></p>
 
-<p>I graduated from Columbia University in 2013 with a degree in Economics/Math. I began using R in a datamining course. After graduation, I worked at NERA Economic Consulting and found R to be extremely useful in statistical analysis.</p>
-
-<p>Interests: Statistics, economics, ethics in algorithms, data visualization, travel, pop science/math/data books, more travel.</p>
+<p>Emily Halford works at the New York State Psychiatric Institute and currently focuses on evaluations of suicide crisis services and suicide prevention media campaigns, as well as examining the impact of the COVID-19 pandemic on suicidality. She is enthusiastic about all things R, and is keenly interested in applications of data science in mental health. Emily received her MPH in Epidemiology from Columbia University’s Mailman School of Public Health and her BA in Biology and Environmental Studies from Bates College.</p>
 
 <h4 id="ludmila-janda">Ludmila Janda</h4>
 
@@ -1007,17 +1005,11 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p>Ludmila Janda is a Data Scientist at Amplify. Amplify is a pioneer in K–12 education since 2000, leading the way in next-generation curriculum and assessment. Today, Amplify serves four million students in all 50 states. Luda’s work provides insights on student and teacher usage, student success, and Amplify’s broader impact. She has a Master’s in Public Policy from the University of North Carolina-Chapel Hill. Her interests include board games, salsa dancing, and causal inference. Follow her on twitter at @ludmila_janda</p>
 
-<h4 id="elizabeth-sweeney">Elizabeth Sweeney</h4>
+<h4 id="angeline-protacio">Angeline Protacio</h4>
 
-<p><img src="/img/elizabeth.jpg" style="width:20%";/></p>
+<p><img src="/img/angeline.jpg" style="width:20%";/></p>
 
-<p>Elizabeth Sweeney is an assistant professor in the Division of Biostatistics and Epidemiology at Weill Cornell. Previously, she was a senior data scientists at Covera health and before that Flatiron health. At both Covera and Flatiron she worked on research with electronic medical records (EMR) data. Elizabeth completed her PhD in Biostatistics at the Johns Hopkins Bloomberg School of Public health in 2016. Her dissertation research made contributions to the improved analysis of structural magnetic resonance imaging (MRI) in patients with multiple sclerosis. Elizabeth has co-taught a number of tutorials and courses on neuroimage data analysis in R, including a Coursera course.  When not analyzing structural MRI or EMR data, Elizabeth enjoys hiking and biking and is currently working towards her Catskills 3500 Club hiking badge.</p>
-
-<h4 id="brooke-watson">Brooke Watson</h4>
-
-<p><img src="/img/brooke_w.jpg" style="width:20%";/></p>
-
-<p>Brooke Watson is a Senior Data Scientist at the American Civil Liberties Union national office, where she conducts quantitative analyses, performs statistical hypothesis tests, and uses standard data science and machine learning techniques to study the impacts of government policies on populations. Prior to her current role, she worked as a Research Scientist studying zoonotic disease at the nonprofit organization EcoHealth Alliance. She holds a Master&rsquo;s degree in Epidemiology from the London School of Hygiene and Tropical Medicine and a Bachelor&rsquo;s degree in Microbiology from the University of Tennessee, where she swam for the Lady Vols.</p>
+<p>Angeline Protacio (she/her) is a Data Scientist at Quartet Health, where she uses healthcare claims and product data to improve access to mental health care, and builds tools to support value based care for mental health providers. She has worked with data in a variety of settings, previously leading mental health data surveillance for the NYC Department of Health and Mental Hygiene, as well as dabbling in freelance data science consulting. She has an MPH in Epidemiology, and is passionate about health equity, social determinants of health, and data for social good. She moved to New York ten years ago from California, and remains perfectly happy with her decision to trade driving cars for riding the subway. When she&rsquo;s not playing with data for work, she&rsquo;s still playing with data to help her fantasy baseball team win, while trying to eat everything NYC has to offer.</p>
 
 <h2 id="past-board-members">Past board members</h2>
 
@@ -1035,11 +1027,37 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p>Interests: Data Analysis, Data Visualization, Statistics, Research Methods, Reproducible Research, Continued learning of R</p>
 
+<h4 id="rika-gorn">Rika Gorn</h4>
+
+<p><img src="/img/rika.jpg" style="width:20%";/></p>
+
+<p>Rika Gorn is the Director of Data Analytics &amp; Reporting at Covenant House International, a privately funded agency that provides shelter, immediate crisis care, and other services, to homeless and trafficked youth in the United States, Canada, and Latin America. Her work focuses on providing statistical analysis, data visualization, and reporting support to 21 sites across the agency. Previously, she worked on quality assurance for a mobile mental health team at Coordinated Behavioral Care, strategic management and evaluation at TCC Group, and program analysis at the Vera Institute of Justice. Rika received her Bachelors in Political Science from Hunter College and her Masters in Public Administration at the NYU Wagner School of Public Service.</p>
+
+<h4 id="gabriela-hempfling">Gabriela Hempfling</h4>
+
+<p><img src="/img/gabriela.png" style="width:20%";/></p>
+
+<p>I graduated from Columbia University in 2013 with a degree in Economics/Math. I began using R in a datamining course. After graduation, I worked at NERA Economic Consulting and found R to be extremely useful in statistical analysis.</p>
+
+<p>Interests: Statistics, economics, ethics in algorithms, data visualization, travel, pop science/math/data books, more travel.</p>
+
 <h4 id="emily-robinson-2017-2019">Emily Robinson (2017-2019)</h4>
 
 <p><img src="/img/emilyr.jpg" style="width:20%";/></p>
 
 <p>I work at DataCamp as a Data Scientist on the growth team. Previously, I was a Data Scientist at Etsy working with their search team to design, implement, and analyze experiments on the ranking algorithm, UI changes, and new features. I’m also an author of the upcoming book, <a href="https://www.manning.com/books/build-your-career-in-data-science?a_aid=buildcareer&amp;a_bid=76784b6a" target="_blank">Build Your Career in Data Science</a>, with Jacqueline Nolis, to be published by Manning in early 2020.</p>
+
+<h4 id="elizabeth-sweeney">Elizabeth Sweeney</h4>
+
+<p><img src="/img/elizabeth.jpg" style="width:20%";/></p>
+
+<p>Elizabeth Sweeney is an assistant professor in the Division of Biostatistics and Epidemiology at Weill Cornell. Previously, she was a senior data scientists at Covera health and before that Flatiron health. At both Covera and Flatiron she worked on research with electronic medical records (EMR) data. Elizabeth completed her PhD in Biostatistics at the Johns Hopkins Bloomberg School of Public health in 2016. Her dissertation research made contributions to the improved analysis of structural magnetic resonance imaging (MRI) in patients with multiple sclerosis. Elizabeth has co-taught a number of tutorials and courses on neuroimage data analysis in R, including a Coursera course.  When not analyzing structural MRI or EMR data, Elizabeth enjoys hiking and biking and is currently working towards her Catskills 3500 Club hiking badge.</p>
+
+<h4 id="brooke-watson">Brooke Watson</h4>
+
+<p><img src="/img/brooke_w.jpg" style="width:20%";/></p>
+
+<p>Brooke Watson is a Senior Data Scientist at the American Civil Liberties Union national office, where she conducts quantitative analyses, performs statistical hypothesis tests, and uses standard data science and machine learning techniques to study the impacts of government policies on populations. Prior to her current role, she worked as a Research Scientist studying zoonotic disease at the nonprofit organization EcoHealth Alliance. She holds a Master&rsquo;s degree in Epidemiology from the London School of Hygiene and Tropical Medicine and a Bachelor&rsquo;s degree in Microbiology from the University of Tennessee, where she swam for the Lady Vols.</p>
 
 <h4 id="jasmine-williams-2016-2019">Jasmine Williams (2016-2019)</h4>
 
