Board section edits

--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p><img src="/img/anisha.png" style="width:20%";/></p>
 
-<p>Anisha BharathSingh (she/her) is a digital marketing expert with four years of experience using data to tell stories and discover opportunities for growth in the digital space. Her passion for R started as an Economics undergrad at Bryn Mawr College and she has since explored R, Data Science and Data for Social Good through Meetups like R-Ladies NYC and the creation of her own data science blog. She is now pursuing her Master of Science in Analytics at The University of Chicago to further her data science and analytics skills.</p>
+<p>Anisha BharathSingh (she/her) is a digital marketing expert with four years of experience using data to tell stories and discover opportunities for growth in the digital space. Her passion for R started as an Economics undergrad at Bryn Mawr College and she has since explored R, Data Science and Data for Social Good through Meetups like R-Ladies NYC and the creation of her own data science blog. She is now pursuing her Master of Science in Analytics at The University of Chicago to expand upon her data science and analytics skills.</p>
 
 <h4 id="alejandra-gerosa">Alejandra Gerosa</h4>
 
