--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <h2 id="past-board-members">Past board members</h2>
 
-<h4 id="soumya-kalra-founder-and-organizer-https-www-linkedin-com-soumyakalra-2016-2019"><a href="https://www.linkedin.com/soumyakalra" target="_blank">Soumya Kalra (Founder and Organizer)</a> (2016-2019)</h4>
+<h4 id="soumya-kalra-founder-https-www-linkedin-com-in-soumyakalra-2016-2019"><a href="https://www.linkedin.com/in/soumyakalra" target="_blank">Soumya Kalra (Founder)</a> (2016-2019)</h4>
 
 <h4 id="birunda-chelliah-2016-2019">Birunda Chelliah (2016-2019)</h4>
 
