Add Meetup link under Recent & Upcoming events

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
   <div class="col-xs-12 col-md-4 section-heading">
 
     <h1>Recent &amp; Upcoming Events</h1>
-    
+    <p>See our <a href="https://www.meetup.com/rladies-newyork/" target="_blank">Meetup Page</a> for the most up-to-date info about our upcoming events!</p>
     
     <p class="view-all">
       <a href="/post/">
