update contact section

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,10 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
     
   </div>
   <div class="col-xs-12 col-md-8">
-    
+    <p><p>Interested in giving a talk for R-Ladies NYC? Please <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL4wbWnrJqRDgtiB4APqfdEw8yeRnz7lOCEttMVvcNbxNW6g/viewform?usp=sf_link" target="_blank">fill out this form</a> with your talk information.</p>
+
+<p>Connect with us on slack! Please <a href="https://docs.google.com/forms/d/e/1FAIpQLScjkESslg5IhU4O2YesvKi2zMoFXrN52ehxDT98yncvvBjFvg/viewform?usp=sf_link" target="_blank">fill out this Google form</a> to receive an invitation.</p>
+</p>
 
     <ul class="fa-ul" itemscope>
 
