add open collective to sponsors section

--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,9 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><img src="/img/RConsortium_Horizontal_Pantone.png" style="width:60%";/></p>
+    <p>Would you like to support R-Ladies NYC? You can make a tax-free donation to our chapter via <a href="https://opencollective.com/rladies-nyc" target="_blank">Open Collective</a>.</p>
+
+<p><img src="/img/RConsortium_Horizontal_Pantone.png" style="width:60%";/></p>
 
   </div>
   
