update about section

--- a/index.html
+++ b/index.html
@@ -289,9 +289,7 @@
 
 <p>R-Ladies NYC is part of a world-wide organization to promote gender diversity in the R community.</p>
 
-<p>We aspire to encourage and support women interested in learning and sharing their experience in R programming by hosting a variety of events including talks, workshops, book clubs, data dives, and socials.</p>
-
-<p>Join the R-Ladies NYC <a href="https://slack.com/" target="_blank">Slack</a> team! Email <a href="mailto:nyc@rladies.org" target="_blank">nyc@rladies.org</a> to request an invitation. Then check back here or visit our Meetup page for event details.</p>
+<p>We aspire to encourage and support women and gender minorities interested in learning and sharing their experiences in R programming by hosting a variety of events including talks, workshops, book clubs, data dives, and socials.</p>
 
 <p>For more information about R-Ladies Global, visit <a href="http://rladies.org/" target="_blank">rladies.org</a>.</p>
 
