--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <h4 id="soumya-kalra-founder-https-www-linkedin-com-in-soumyakalra-2016-2019"><a href="https://www.linkedin.com/in/soumyakalra" target="_blank">Soumya Kalra (Founder)</a> (2016-2019)</h4>
 
-<h4 id="birunda-chelliah-2016-2019">Birunda Chelliah (2016-2019)</h4>
+<h4 id="birunda-chelliah-https-www-linkedin-com-in-birundachelliah-2016-2019"><a href="https://www.linkedin.com/in/birundachelliah/" target="_blank">Birunda Chelliah</a> (2016-2019)</h4>
 
 <h4 id="rika-gorn-https-www-linkedin-com-in-rika-gorn-2019-2021"><a href="https://www.linkedin.com/in/rika-gorn" target="_blank">Rika Gorn</a> (2019-2021)</h4>
 
