add to past board members

--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,8 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <h4 id="angeline-protacio-2021-2022">Angeline Protacio (2021-2022)</h4>
 
+<h4 id="ayanthi-gunawardana-2019-2023">Ayanthi Gunawardana (2019-2023)</h4>
+
   </div>
   
 </div>
