updating logo contest post

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
   
   
   <h3 class="article-title" itemprop="name">
-    <a href="/post/request-for-r-ladies-logo-submissions-2024/" itemprop="url">Announcing the R-Ladies Logo Contest</a>
+    <a href="/post/request-for-r-ladies-logo-submissions-2024/" itemprop="url">R-Ladies Logo Contest Announcement</a>
   </h3>
   
 
@@ -407,7 +407,7 @@
 
   <div class="article-style" itemprop="articleBody">
     
-    It has been four years since we did an open call for a new R-Ladies logo, which means R-Ladies NYC is in the market for a new look! We are excited to announce a new R-Ladies NYC logo contest. Please email your submissions to nyc\@rladies.org{.email} with the subject line &ldquo;hex sticker design&rdquo;. Submissions are due by the end of January and we will hold a public vote during the first two weeks of February.
+    It has been four years since we did an open call for a new R-Ladies logo, which means R-Ladies NYC is in the market for a new look! We are excited to announce a new R-Ladies NYC logo contest. Please email your submissions to nyc@rladies.org with the subject line &ldquo;hex sticker design&rdquo;. Submissions are due by the end of January and we will hold a public vote during the first two weeks of February.
     
   </div>
   <p class="read-more">
